CIE94 added to html demo

--- a/demo/html/index.html
+++ b/demo/html/index.html
@@ -34,9 +34,10 @@
 						<option value="0">Euclidean</option>
 						<option value="1">Manhattan</option>
 						<option value="2">CIEDE2000</option>
-						<option value="3">RgbQuant Euclidean (w/o ALPHA)</option>
-						<option value="4" selected>NeuQuant Manhattan (w/o sRGB coef)</option>
-						<option value="5">WuQuant Euclidean (w/o sRGB coef)</option>
+						<option value="3">CIE94</option>
+						<option value="4">RgbQuant Euclidean (w/o ALPHA)</option>
+						<option value="5" selected>NeuQuant Manhattan (w/o sRGB coef)</option>
+						<option value="6">WuQuant Euclidean (w/o sRGB coef)</option>
 					</select>
 				</div>
 				<div class="option">
