Draft CMETRIC color distance added

--- a/demo/html/index.html
+++ b/demo/html/index.html
@@ -38,6 +38,7 @@
 						<option value="4">RgbQuant Euclidean (w/o ALPHA)</option>
 						<option value="5" selected>NeuQuant Manhattan (w/o sRGB coef)</option>
 						<option value="6">WuQuant Euclidean (w/o sRGB coef)</option>
+						<option value="7">CMETRIC</option>
 					</select>
 				</div>
 				<div class="option">
