--- a/demo/html/index.html
+++ b/demo/html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="lib/webix/webix.css" type="text/css" charset="utf-8">
     <script src="lib/webix/webix_debug.js" type="text/javascript" charset="utf-8"></script>
     <script src="dist/app.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../dist/iq.js" type="text/javascript" charset="utf-8"></script>
+    <!--<script src="../../dist/iq.js" type="text/javascript" charset="utf-8"></script>-->
     <style>
         .image-semi-transparent-background {
             background-image:
