--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
 					<tbody>
 						<tr>
 							<td><a href="globals.html#lab2rgb">lab2rgb</a></td>
-							<td style="text-align:left">CIE L<em>a</em>b* =&gt; CIE RGB</td>
+							<td style="text-align:left">CIE L*a*b* =&gt; CIE RGB</td>
 						</tr>
 						<tr>
 							<td><a href="globals.html#lab2xyz">lab2xyz</a></td>
-							<td style="text-align:left">CIE L<em>a</em>b* =&gt; CIE XYZ</td>
+							<td style="text-align:left">CIE L*a*b* =&gt; CIE XYZ</td>
 						</tr>
 						<tr>
 							<td><a href="globals.html#rgb2hsl">rgb2hsl</a></td>
@@ -353,7 +353,7 @@
 						</tr>
 						<tr>
 							<td><a href="globals.html#rgb2lab">rgb2lab</a></td>
-							<td style="text-align:left">CIE RGB =&gt; CIE L<em>a</em>b*</td>
+							<td style="text-align:left">CIE RGB =&gt; CIE L*a*b*</td>
 						</tr>
 						<tr>
 							<td><a href="globals.html#rgb2xyz">rgb2xyz</a></td>
@@ -361,7 +361,7 @@
 						</tr>
 						<tr>
 							<td><a href="globals.html#xyz2lab">xyz2lab</a></td>
-							<td style="text-align:left">CIE XYZ =&gt; CIE L<em>a</em>b*</td>
+							<td style="text-align:left">CIE XYZ =&gt; CIE L*a*b*</td>
 						</tr>
 						<tr>
 							<td><a href="globals.html#xyz2rgb">xyz2rgb</a></td>
