--- a/classes/abstractdistancecalculator.html
+++ b/classes/abstractdistancecalculator.html
@@ -133,7 +133,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L17">distance/distanceCalculator.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L17">distance/distanceCalculator.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="abstractdistancecalculator.html" class="tsd-signature-type">AbstractDistanceCalculator</a></h4>
@@ -149,7 +149,7 @@
 					<div class="tsd-signature tsd-kind-icon">_max<wbr>Distance<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L11">distance/distanceCalculator.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L11">distance/distanceCalculator.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -159,7 +159,7 @@
 					<div class="tsd-signature tsd-kind-icon">_white<wbr>Point<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L12">distance/distanceCalculator.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L12">distance/distanceCalculator.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -193,7 +193,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L45">distance/distanceCalculator.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L45">distance/distanceCalculator.ts:45</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -204,22 +204,22 @@
 					<a name="calculatenormalized" class="tsd-anchor"></a>
 					<h3>calculate<wbr>Normalized</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">calculate<wbr>Normalized<span class="tsd-signature-symbol">(</span>colorA<span class="tsd-signature-symbol">: </span><a href="point.html" class="tsd-signature-type">Point</a>, colorB<span class="tsd-signature-symbol">: </span><a href="point.html" class="tsd-signature-type">Point</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
+						<li class="tsd-signature tsd-kind-icon">calculate<wbr>Normalized<span class="tsd-signature-symbol">(</span>colorA<span class="tsd-signature-symbol">: </span><a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a>, colorB<span class="tsd-signature-symbol">: </span><a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L36">distance/distanceCalculator.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L36">distance/distanceCalculator.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>colorA: <a href="point.html" class="tsd-signature-type">Point</a></h5>
+									<h5>colorA: <a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a></h5>
 								</li>
 								<li>
-									<h5>colorB: <a href="point.html" class="tsd-signature-type">Point</a></h5>
+									<h5>colorB: <a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -236,7 +236,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L43">distance/distanceCalculator.ts:43</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L43">distance/distanceCalculator.ts:43</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -285,7 +285,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L26">distance/distanceCalculator.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L26">distance/distanceCalculator.ts:26</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
