--- a/index.html
+++ b/index.html
@@ -462,9 +462,6 @@
 						<a href="classes/huestatistics.html" class="tsd-kind-icon">Hue<wbr>Statistics</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="classes/iq.html" class="tsd-kind-icon">IQ</a>
-					</li>
-					<li class=" tsd-kind-class">
 						<a href="classes/manhattan.html" class="tsd-kind-icon">Manhattan</a>
 					</li>
 					<li class=" tsd-kind-class">
@@ -515,8 +512,14 @@
 					<li class=" tsd-kind-class">
 						<a href="classes/wuquant.html" class="tsd-kind-icon">Wu<wbr>Quant</a>
 					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/applypaletteoptions.html" class="tsd-kind-icon">Apply<wbr>Palette<wbr>Options</a>
+					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/box.html" class="tsd-kind-icon">Box</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/buildpaletteoptions.html" class="tsd-kind-icon">Build<wbr>Palette<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/data.html" class="tsd-kind-icon">Data</a>
@@ -526,6 +529,21 @@
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="interfaces/palettequantizeryieldvalue.html" class="tsd-kind-icon">Palette<wbr>Quantizer<wbr>Yield<wbr>Value</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/pointrgba.html" class="tsd-kind-icon">PointRGBA</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/progressoptions.html" class="tsd-kind-icon">Progress<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#colordistanceformula" class="tsd-kind-icon">Color<wbr>Distance<wbr>Formula</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#imagequantization" class="tsd-kind-icon">Image<wbr>Quantization</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#palettequantization" class="tsd-kind-icon">Palette<wbr>Quantization</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="globals.html#k1" class="tsd-kind-icon">K1</a>
@@ -548,11 +566,26 @@
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="globals.html#refz" class="tsd-kind-icon">refZ</a>
 					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#applypalette" class="tsd-kind-icon">apply<wbr>Palette</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#applypalettesync" class="tsd-kind-icon">apply<wbr>Palette<wbr>Sync</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#buildpalette" class="tsd-kind-icon">build<wbr>Palette</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#buildpalettesync" class="tsd-kind-icon">build<wbr>Palette<wbr>Sync</a>
+					</li>
 					<li class=" tsd-kind-function tsd-is-not-exported">
 						<a href="globals.html#calculateaverageluma" class="tsd-kind-icon">calculate<wbr>Average<wbr>Luma</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-not-exported">
 						<a href="globals.html#calculatelumavaluesforwindow" class="tsd-kind-icon">calculate<wbr>Luma<wbr>Values<wbr>For<wbr>Window</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-not-exported">
+						<a href="globals.html#colordistanceformulatocolordistance" class="tsd-kind-icon">color<wbr>Distance<wbr>Formula<wbr>ToColor<wbr>Distance</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-not-exported">
 						<a href="globals.html#correctgamma" class="tsd-kind-icon">correct<wbr>Gamma</a>
@@ -581,6 +614,9 @@
 					<li class=" tsd-kind-function">
 						<a href="globals.html#huegroup" class="tsd-kind-icon">hue<wbr>Group</a>
 					</li>
+					<li class=" tsd-kind-function tsd-is-not-exported">
+						<a href="globals.html#imagequantizationtoimagequantizer" class="tsd-kind-icon">image<wbr>Quantization<wbr>ToImage<wbr>Quantizer</a>
+					</li>
 					<li class=" tsd-kind-function">
 						<a href="globals.html#inrange0to255" class="tsd-kind-icon">in<wbr>Range0to255</a>
 					</li>
@@ -604,6 +640,9 @@
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="globals.html#min3" class="tsd-kind-icon">min3</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-not-exported">
+						<a href="globals.html#palettequantizationtopalettequantizer" class="tsd-kind-icon">palette<wbr>Quantization<wbr>ToPalette<wbr>Quantizer</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-not-exported">
 						<a href="globals.html#pivot" class="tsd-kind-icon">pivot</a>
