--- a/classes/euclidean.html
+++ b/classes/euclidean.html
@@ -123,7 +123,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L17">distance/distanceCalculator.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L17">distance/distanceCalculator.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="euclidean.html" class="tsd-signature-type">Euclidean</a></h4>
@@ -140,7 +140,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstracteuclidean.html">AbstractEuclidean</a>.<a href="abstracteuclidean.html#_ka">_kA</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/euclidean.ts#L18">distance/euclidean.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/euclidean.ts#L18">distance/euclidean.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -151,7 +151,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstracteuclidean.html">AbstractEuclidean</a>.<a href="abstracteuclidean.html#_kb">_kB</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/euclidean.ts#L17">distance/euclidean.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/euclidean.ts#L17">distance/euclidean.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -162,7 +162,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstracteuclidean.html">AbstractEuclidean</a>.<a href="abstracteuclidean.html#_kg">_kG</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/euclidean.ts#L16">distance/euclidean.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/euclidean.ts#L16">distance/euclidean.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -173,7 +173,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstracteuclidean.html">AbstractEuclidean</a>.<a href="abstracteuclidean.html#_kr">_kR</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/euclidean.ts#L15">distance/euclidean.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/euclidean.ts#L15">distance/euclidean.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -184,7 +184,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#_maxdistance">_maxDistance</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L11">distance/distanceCalculator.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L11">distance/distanceCalculator.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -195,7 +195,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#_whitepoint">_whitePoint</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L12">distance/distanceCalculator.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L12">distance/distanceCalculator.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -230,7 +230,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#_setdefaults">_setDefaults</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/euclidean.ts#L30">distance/euclidean.ts:30</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/euclidean.ts#L30">distance/euclidean.ts:30</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -241,23 +241,23 @@
 					<a name="calculatenormalized" class="tsd-anchor"></a>
 					<h3>calculate<wbr>Normalized</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">calculate<wbr>Normalized<span class="tsd-signature-symbol">(</span>colorA<span class="tsd-signature-symbol">: </span><a href="point.html" class="tsd-signature-type">Point</a>, colorB<span class="tsd-signature-symbol">: </span><a href="point.html" class="tsd-signature-type">Point</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
+						<li class="tsd-signature tsd-kind-icon">calculate<wbr>Normalized<span class="tsd-signature-symbol">(</span>colorA<span class="tsd-signature-symbol">: </span><a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a>, colorB<span class="tsd-signature-symbol">: </span><a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#calculatenormalized">calculateNormalized</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L36">distance/distanceCalculator.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L36">distance/distanceCalculator.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>colorA: <a href="point.html" class="tsd-signature-type">Point</a></h5>
+									<h5>colorA: <a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a></h5>
 								</li>
 								<li>
-									<h5>colorB: <a href="point.html" class="tsd-signature-type">Point</a></h5>
+									<h5>colorB: <a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -276,7 +276,7 @@
 								<p>Inherited from <a href="abstracteuclidean.html">AbstractEuclidean</a>.<a href="abstracteuclidean.html#calculateraw">calculateRaw</a></p>
 								<p>Overrides <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#calculateraw">calculateRaw</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/euclidean.ts#L20">distance/euclidean.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/euclidean.ts#L20">distance/euclidean.ts:20</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -321,7 +321,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#setwhitepoint">setWhitePoint</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L26">distance/distanceCalculator.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L26">distance/distanceCalculator.ts:26</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
