--- a/classes/pngquant.html
+++ b/classes/pngquant.html
@@ -130,7 +130,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L17">distance/distanceCalculator.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L17">distance/distanceCalculator.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="pngquant.html" class="tsd-signature-type">PNGQuant</a></h4>
@@ -147,7 +147,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#_maxdistance">_maxDistance</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L11">distance/distanceCalculator.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L11">distance/distanceCalculator.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -158,7 +158,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#_whitepoint">_whitePoint</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L12">distance/distanceCalculator.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L12">distance/distanceCalculator.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -193,7 +193,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#_setdefaults">_setDefaults</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/pngQuant.ts#L50">distance/pngQuant.ts:50</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/pngQuant.ts#L50">distance/pngQuant.ts:50</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -204,23 +204,23 @@
 					<a name="calculatenormalized" class="tsd-anchor"></a>
 					<h3>calculate<wbr>Normalized</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">calculate<wbr>Normalized<span class="tsd-signature-symbol">(</span>colorA<span class="tsd-signature-symbol">: </span><a href="point.html" class="tsd-signature-type">Point</a>, colorB<span class="tsd-signature-symbol">: </span><a href="point.html" class="tsd-signature-type">Point</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
+						<li class="tsd-signature tsd-kind-icon">calculate<wbr>Normalized<span class="tsd-signature-symbol">(</span>colorA<span class="tsd-signature-symbol">: </span><a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a>, colorB<span class="tsd-signature-symbol">: </span><a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#calculatenormalized">calculateNormalized</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L36">distance/distanceCalculator.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L36">distance/distanceCalculator.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>colorA: <a href="point.html" class="tsd-signature-type">Point</a></h5>
+									<h5>colorA: <a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a></h5>
 								</li>
 								<li>
-									<h5>colorB: <a href="point.html" class="tsd-signature-type">Point</a></h5>
+									<h5>colorB: <a href="../interfaces/pointrgba.html" class="tsd-signature-type">PointRGBA</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -238,7 +238,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#calculateraw">calculateRaw</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/pngQuant.ts#L34">distance/pngQuant.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/pngQuant.ts#L34">distance/pngQuant.ts:34</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -298,7 +298,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="abstractdistancecalculator.html">AbstractDistanceCalculator</a>.<a href="abstractdistancecalculator.html#setwhitepoint">setWhitePoint</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/89f35c6/src/distance/distanceCalculator.ts#L26">distance/distanceCalculator.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/distance/distanceCalculator.ts#L26">distance/distanceCalculator.ts:26</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
